force-app/main/default/objects/Custom_Product_Request__c/Custom_Product_Request__c.object-meta.xml
<CustomObject>
    <description>Captures a product or service requested for a Case and supports a future approval-to-quote lifecycle.</description>
    <label>Custom Product Request</label>
    <nameField>
        <displayFormat>CPR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Product Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>