force-app/main/default/objects/Custom_Product_Request__c/fields/Basket_Id__c.field-meta.xml
<CustomField>
    <fullName>Basket_Id__c</fullName>
    <description>SFCC/MRT basket Id returned by POST /action/sfsc-deposit-basket for this request&apos;s deposit (Link 1). Used to cancel the basket via /action/sfsc-delete-basket before the customer pays. (v2)</description>
    <externalId>true</externalId>
    <label>Basket Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>