force-app/main/default/objects/Custom_Product_Request__c/fields/Basket_Log__c.field-meta.xml
<CustomField>
    <fullName>Basket_Log__c</fullName>
    <description>Timestamped audit trail of deposit-basket create/delete callouts to SFCC/MRT for this request — status codes, categorised errors (400 payload / 401 auth / 502 gateway), and retry outcomes.</description>
    <label>Basket Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>