force-app/main/default/objects/Custom_Product_Request__c/fields/Basket_Status__c.field-meta.xml
<CustomField>
    <fullName>Basket_Status__c</fullName>
    <description>Lifecycle of this request&apos;s N-Genius split-payment deposit basket. Drives whether Create/Delete Deposit Basket actions are offered and whether the customer notification has gone out.</description>
    <label>Basket Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>