force-app/main/default/objects/Custom_Product_Request__c/fields/Brief_Source__c.field-meta.xml
<CustomField>
    <fullName>Brief_Source__c</fullName>
    <description>Whether the customer shared their idea via an uploaded reference image or a written description, from the Customise wizard&apos;s &quot;Your vision&quot; step.</description>
    <label>Brief Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded Reference</fullName>
            </value>
            <value>
                <fullName>Written Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>