force-app/main/default/objects/Custom_Product_Request__c/fields/Budget_Guide__c.field-meta.xml
<CustomField>
    <fullName>Budget_Guide__c</fullName>
    <description>Budget band captured from the Customise wizard&apos;s &quot;Your vision&quot; step. Optional on the website.</description>
    <label>Budget Guide</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under AED 10,000</fullName>
            </value>
            <value>
                <fullName>AED 10,000 - 25,000</fullName>
            </value>
            <value>
                <fullName>AED 25,000 - 50,000</fullName>
            </value>
            <value>
                <fullName>AED 50,000 - 100,000</fullName>
            </value>
            <value>
                <fullName>Above AED 100,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>