force-app/main/default/objects/Custom_Product_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Custom Product Requests</relationshipLabel>
    <relationshipName>Custom_Product_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>