force-app/main/default/objects/Custom_Product_Request__c/fields/Certification_Type_Requested__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type_Requested__c</fullName>
    <label>Certification Type Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GIA</fullName>
            </value>
            <value>
                <fullName>IGI</fullName>
            </value>
            <value>
                <fullName>AGS</fullName>
            </value>
            <value>
                <fullName>GSI</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>