force-app/main/default/objects/Custom_Product_Request__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Preferred colour captured from the Customise wizard&apos;s &quot;Your vision&quot; step. Value comes from the CSR-managed Customisation_Option__c catalog (Option Type = &quot;Color&quot;). Plain text so new catalog values never require a metadata deploy.</description>
    <label>Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>