force-app/main/default/objects/Custom_Product_Request__c/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <description>Deposit amount confirmed back by SFCC/MRT on POST /action/sfsc-deposit-basket (Link 1).</description>
    <label>Deposit Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>