force-app/main/default/objects/Custom_Product_Request__c/fields/Deposit_Link__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Link__c</fullName>
    <description>Link 1 (deposit payment) returned by POST /action/sfsc-deposit-basket, e.g. /pay/deposit?basketId=... Sent to the customer by CARASplitPaymentNotificationService.</description>
    <label>Deposit Link</label>
    <type>Url</type>
</CustomField>