force-app/main/default/objects/Custom_Product_Request__c/fields/Diamond_Carat__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Carat__c</fullName>
    <label>Diamond Carat</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>