force-app/main/default/objects/Custom_Product_Request__c/fields/Diamond_Shape__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Shape__c</fullName>
    <label>Diamond Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Princess</fullName>
            </value>
            <value>
                <fullName>Cushion</fullName>
            </value>
            <value>
                <fullName>Oval</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Pear</fullName>
            </value>
            <value>
                <fullName>Marquise</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Asscher</fullName>
            </value>
            <value>
                <fullName>Heart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>