force-app/main/default/objects/Custom_Product_Request__c/fields/Diamond_Type__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Type__c</fullName>
    <label>Diamond Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Lab-Grown</fullName>
            </value>
            <value>
                <fullName>Moissanite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>