force-app/main/default/objects/Custom_Product_Request__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>