force-app/main/default/objects/Custom_Product_Request__c/fields/Metal__c.field-meta.xml
<CustomField>
    <fullName>Metal__c</fullName>
    <label>Metal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yellow Gold</fullName>
            </value>
            <value>
                <fullName>White Gold</fullName>
            </value>
            <value>
                <fullName>Rose Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Titanium</fullName>
            </value>
            <value>
                <fullName>Palladium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>