force-app/main/default/objects/Custom_Product_Request__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <description>Full order total confirmed back by SFCC/MRT on POST /action/sfsc-deposit-basket, alongside the deposit.</description>
    <label>Order Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>