force-app/main/default/objects/Custom_Product_Request__c/fields/Piece_Type__c.field-meta.xml
<CustomField>
    <fullName>Piece_Type__c</fullName>
    <description>The jewellery piece the customer wants customised, captured from the Customise wizard&apos;s &quot;Piece&quot; step.</description>
    <label>Piece Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ring</fullName>
            </value>
            <value>
                <fullName>Engagement Ring</fullName>
            </value>
            <value>
                <fullName>Necklace</fullName>
            </value>
            <value>
                <fullName>Earrings</fullName>
            </value>
            <value>
                <fullName>Bracelet</fullName>
            </value>
            <value>
                <fullName>Pendant</fullName>
            </value>
            <value>
                <fullName>Something Else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>