force-app/main/default/objects/Custom_Product_Request__c/fields/Preferred_Metal__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Metal__c</fullName>
    <description>Preferred metal captured from the Customise wizard&apos;s &quot;Your vision&quot; step. Optional on the website.</description>
    <label>Preferred Metal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yellow Gold</fullName>
            </value>
            <value>
                <fullName>White Gold</fullName>
            </value>
            <value>
                <fullName>Rose Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Not sure yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>