force-app/main/default/objects/Custom_Product_Request__c/fields/Requested_Specification__c.field-meta.xml
<CustomField>
    <fullName>Requested_Specification__c</fullName>
    <label>Requested Specification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>