force-app/main/default/objects/Custom_Product_Request__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size options depend on the selected Product Category (e.g. Ring sizes, bracelet/anklet lengths in inches, necklace/chain lengths in inches, earring/watch diameters in mm, pendant sizes).</description>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>3</fullName><default>false</default><label>3</label></value>
            <value><fullName>3.5</fullName><default>false</default><label>3.5</label></value>
            <value><fullName>4</fullName><default>false</default><label>4</label></value>
            <value><fullName>4.5</fullName><default>false</default><label>4.5</label></value>
            <value><fullName>5</fullName><default>false</default><label>5</label></value>
            <value><fullName>5.5</fullName><default>false</default><label>5.5</label></value>
            <value><fullName>6</fullName><default>false</default><label>6</label></value>
            <value><fullName>6.5</fullName><default>false</default><label>6.5</label></value>
            <value><fullName>7</fullName><default>false</default><label>7</label></value>
            <value><fullName>7.5</fullName><default>false</default><label>7.5</label></value>
            <value><fullName>8</fullName><default>false</default><label>8</label></value>
            <value><fullName>8.5</fullName><default>false</default><label>8.5</label></value>
            <value><fullName>9</fullName><default>false</default><label>9</label></value>
            <value><fullName>9.5</fullName><default>false</default><label>9.5</label></value>
            <value><fullName>10</fullName><default>false</default><label>10</label></value>
            <value><fullName>10.5</fullName><default>false</default><label>10.5</label></value>
            <value><fullName>11</fullName><default>false</default><label>11</label></value>
            <value><fullName>11.5</fullName><default>false</default><label>11.5</label></value>
            <value><fullName>12</fullName><default>false</default><label>12</label></value>
            <value><fullName>12.5</fullName><default>false</default><label>12.5</label></value>
            <value><fullName>13</fullName><default>false</default><label>13</label></value>
            <value><fullName>6&quot;</fullName><default>false</default><label>6 inch</label></value>
            <value><fullName>6.5&quot;</fullName><default>false</default><label>6.5 inch</label></value>
            <value><fullName>7&quot;</fullName><default>false</default><label>7 inch</label></value>
            <value><fullName>7.5&quot;</fullName><default>false</default><label>7.5 inch</label></value>
            <value><fullName>8&quot;</fullName><default>false</default><label>8 inch</label></value>
            <value><fullName>8.5&quot;</fullName><default>false</default><label>8.5 inch</label></value>
            <value><fullName>9&quot;</fullName><default>false</default><label>9 inch</label></value>
            <value><fullName>9.5&quot;</fullName><default>false</default><label>9.5 inch</label></value>
            <value><fullName>10&quot;</fullName><default>false</default><label>10 inch</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>