force-app/main/default/objects/Custom_Product_Request__c/fields/Stone_Type__c.field-meta.xml
<CustomField>
    <fullName>Stone_Type__c</fullName>
    <description>Preferred stone type captured from the Customise wizard&apos;s &quot;Your vision&quot; step. Value comes from the CSR-managed Customisation_Option__c catalog (Option Type = &quot;Stone Type&quot;). Plain text so new catalog values never require a metadata deploy.</description>
    <label>Stone Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>