force-app/main/default/objects/Custom_Product_Request__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <description>Desired timeline captured from the Customise wizard&apos;s &quot;Your vision&quot; step. Optional on the website.</description>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No particular rush</fullName>
            </value>
            <value>
                <fullName>Within 1 month</fullName>
            </value>
            <value>
                <fullName>Within 3 months</fullName>
            </value>
            <value>
                <fullName>For a specific date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>