force-app/main/default/objects/Custom_Product_Request__c/validationRules/Prices_Must_Be_Nonnegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Prices_Must_Be_Nonnegative</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Estimated_Cost__c &lt; 0, Selling_Price__c &lt; 0)</errorConditionFormula>
    <errorMessage>Estimated Cost and Selling Price cannot be negative.</errorMessage>
</ValidationRule>